[gd_scene load_steps=12 format=2]

[ext_resource path="res://WorldEnvironment.tscn" type="PackedScene" id=1]
[ext_resource path="res://SailboatMesh.tscn" type="PackedScene" id=2]
[ext_resource path="res://CameraPivot.gd" type="Script" id=3]
[ext_resource path="res://Sailboat.gd" type="Script" id=4]
[ext_resource path="res://StaticPlayer.gd" type="Script" id=5]
[ext_resource path="res://wood-snap.wav" type="AudioStream" id=6]
[ext_resource path="res://static.wav" type="AudioStream" id=9]
[ext_resource path="res://Main.gd" type="Script" id=10]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1.76229, 0.772962, 1.41506 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.57749, 0.772962, 0.623101 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.137345, 0.772962, 0.623101 )

[node name="Main" type="Spatial"]
script = ExtResource( 10 )

[node name="CurLevel" type="Spatial" parent="."]

[node name="CameraPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 0.87224, 0.489078, 0, -0.489078, 0.87224, 0, 0, 0 )
script = ExtResource( 3 )
look_at_path = NodePath("../Sailboat/CameraTarget")

[node name="Camera" type="Camera" parent="CameraPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20 )
far = 500.0

[node name="Sailboat" type="KinematicBody" parent="." groups=[
"players",
]]
transform = Transform( -0.997971, 0, -0.0636615, 0, 1, 0, 0.0636615, 0, -0.997971, 0, 0.861633, 0 )
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Sailboat"]
transform = Transform( 1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CollisionShape2" type="CollisionShape" parent="Sailboat"]
transform = Transform( 1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 1.883, 0, 0 )
shape = SubResource( 2 )
disabled = true

[node name="CollisionShape3" type="CollisionShape" parent="Sailboat"]
transform = Transform( 1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 2.618, 0, 0 )
shape = SubResource( 3 )
disabled = true

[node name="SailboatMesh" parent="Sailboat" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.462857, 0 )

[node name="CameraTarget" type="Spatial" parent="Sailboat"]

[node name="RudderPosition" type="Position3D" parent="Sailboat"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.9906, 0, -0.126982 )

[node name="BuoyancyPoints" type="Spatial" parent="Sailboat"]

[node name="CrackPlayer" type="AudioStreamPlayer" parent="Sailboat"]
stream = ExtResource( 6 )
bus = "snap"

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.891323, 0.453368, 0, -0.453368, 0.891323, 0, 0, 0 )
visible = false
shadow_enabled = true

[node name="StaticPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true
bus = "static"
script = ExtResource( 5 )
player_path = NodePath("../Sailboat")

[node name="RespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="WorldEnvironment" parent="." instance=ExtResource( 1 )]

[connection signal="dead" from="Sailboat" to="." method="_on_Sailboat_dead"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
